--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "dependencies": {
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-ionicons": "^4.2.0",
+    "styled-components": "^5.3.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
